; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target.c_iscsit_convert_tcm_tmr_rsp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target.c_iscsit_convert_tcm_tmr_rsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.se_tmr_req = type { i32 }

@ISCSI_TMF_RSP_COMPLETE = common dso_local global i32 0, align 4
@ISCSI_TMF_RSP_NO_TASK = common dso_local global i32 0, align 4
@ISCSI_TMF_RSP_NO_LUN = common dso_local global i32 0, align 4
@ISCSI_TMF_RSP_NOT_SUPPORTED = common dso_local global i32 0, align 4
@ISCSI_TMF_RSP_REJECTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.se_tmr_req*)* @iscsit_convert_tcm_tmr_rsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsit_convert_tcm_tmr_rsp(%struct.se_tmr_req* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.se_tmr_req*, align 8
  store %struct.se_tmr_req* %0, %struct.se_tmr_req** %3, align 8
  %4 = load %struct.se_tmr_req*, %struct.se_tmr_req** %3, align 8
  %5 = getelementptr inbounds %struct.se_tmr_req, %struct.se_tmr_req* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 132, label %7
    i32 129, label %9
    i32 130, label %11
    i32 128, label %13
    i32 131, label %15
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @ISCSI_TMF_RSP_COMPLETE, align 4
  store i32 %8, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load i32, i32* @ISCSI_TMF_RSP_NO_TASK, align 4
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* @ISCSI_TMF_RSP_NO_LUN, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load i32, i32* @ISCSI_TMF_RSP_NOT_SUPPORTED, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1
  br label %16

16:                                               ; preds = %1, %15
  %17 = load i32, i32* @ISCSI_TMF_RSP_REJECTED, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %16, %13, %11, %9, %7
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
